<resources>
    <string name="app_name">HabitTrainer</string>
    <string name="drink_water">Drink Water</string>
    <string name="title_image">Title Image</string>
    <string name="description_text">A refreshing glass of water keeps you hydrated</string>
    <string name="begin_habit">Begin new habit...</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="preview_image">Preview Image</string>
    <string name="error_message">Error Message</string>
    <string name="save">Save Habit</string>
</resources>